# Books-Vault

./: .gitignore  README.md
backend/: .env.example  alembic.ini  main.py  pyproject.toml  test_main.http
backend/alembic/: env.py
backend/alembic/versions/: 33eadfef796f_type_attrib_added_in_content.py  3c9d7cfd695b_articles_table_modified.py  8010b8c6ae50_init.py  950149b8bb5b_upload_request_added.py  a53674e20c3e_book_updated.py  c7d3b4cedb0d_articles_table_added.py  de874afafe63_added_constraint_on_content_and_book.py  e409cbfffe20_rel_update_1.py
backend/app/api/endpoints/book/: book.py  functions.py
backend/app/api/endpoints/upload_request/: functions.py  upload_request.py
backend/app/api/endpoints/user/: admin.py  auth.py  functions.py  user.py
backend/app/api/routers/: book.py  main_router.py  upload_request.py  user.py
backend/app/core/: config.py  dependencies.py  logger.py  security.py
backend/app/core/db/: __init__.py  base.py  engine.py  health.py  session.py
backend/app/core/exceptions/: http_exceptions.py
backend/app/models/: __init__.py  article.py  book.py  content.py  lists.py  upload_request.py  user.py
backend/app/schemas/: article.py  book.py  token.py  upload_request.py  user.py
frontend/: components.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: app.css  root.tsx  routes.ts
frontend/app/api/: booksApi.ts
frontend/app/components/: BookCard.tsx  BookList.tsx  FormField.tsx  Login.tsx  Register.tsx  SearchInput.tsx
frontend/app/hooks/: useAuth.ts  useBookUpload.ts
frontend/app/routes/: contact.tsx  (+3 more)
(+26 files in other folders)
